Fix horizontal scroll in menu
Fixes #469

--- a/project/src/styl/menu.styl
+++ b/project/src/styl/menu.styl
@@ -82,7 +82,6 @@
   > .user_profile_button
     color darken(#fff, 20%)
     text-align left
-    width 100%
     margin-left 15px
     > .arrow
       margin-left 10px
